--- a/测试/test.html
+++ b/测试/test.html
@@ -18,12 +18,11 @@
 			}
 		</style>
 	</head>
-	<body>
+	<body id="body">
 		<canvas id="canvas" width="" height=""></canvas>
 	</body>
 </html>
 <script>
-	
 	
 	let canvas = document.getElementById('canvas');
 	
@@ -124,11 +123,13 @@
 			this.speedy = speedy;
 			this.radius = radius;
 			this.tag = tag;
+			this.activate = true;
 		}
 		
 		update(){
 			let x = this.x + this.speedx;
 			let y = this.y + this.speedy;
+			
 			if(x - this.radius <= left_bound){
 				this.speedx = Math.abs(this.speedx);
 			}
@@ -137,13 +138,14 @@
 			}
 			
 			if(y + this.radius >= canvas.height){
-				this.speedy = -Math.abs(this.speedy);
-				this.tag = 0;
+				this.activate = false;
+				//this.tag = 0;
 			}
 			
 			if(y - this.radius <= 0){
 				this.speedy = Math.abs(this.speedy);
-				this.tag = 1;
+				// this.speedy = Math.abs(this.speedy);
+				// this.tag = 1;
 			}
 			
 			this.x += this.speedx;
@@ -167,35 +169,148 @@
 		}
 	}
 	
-	// let ball = new Ball((left_bound + right_bound) / 2,canvas.height - 50,10,10,5);
 	
 	let ballList = [];
-	
-	for(let i = 0;i < 8;i++){
+
+	for(let i = 0;i < 15;i++){
 		let tag = Math.floor(Math.random() * 2);
 		ballList.push(new Ball(Math.random() * (right_bound - left_bound) + left_bound,
-							tag ? -Math.random() * 40 + canvas.height : Math.random() * 40,
-							Math.random() * 4 + 2,
-							Math.random() * 4 + 2,5,tag));
+							//tag ? -Math.random() * 40 + canvas.height : Math.random() * 40,
+							Math.random() * 40,
+							Math.random() * 2 + 2,
+							Math.random() * 2 + 2,5,tag));
 	}
 	
+	class board
+	{
+		constructor(dx,dy,len,wide,speed)
+		{
+			this.x = dx-len/2; // 左上横坐标
+			this.y = dy-wide/2; // 左上纵坐标
+			this.len = len; // 长度
+			this.width = wide; // 宽度
+			this.speed = speed; // 移动速度
+			this.dir = 0;
+		}
+		draw()
+		{
+			ctx.fillStyle = 'white';
+			ctx.fillRect(this.x,this.y,this.len,this.width);
+		}	
+		update()
+		{
+			if(this.dir == 1)
+			{
+				if(this.x + this.len + this.speed <= right_bound)
+					this.x = this.x + this.speed; 
+			}
+			if(this.dir == -1)
+			{
+				if(this.x - this.speed >= left_bound)
+					this.x = this.x - this.speed; 
+			}
+		}
+		checkCollision(ball)
+		{
+			let x = ball.x;
+			let y = ball.y;
+			let bottom = this.y + this.width;
+			let right = this.x + this.len;
+			let top = this.y;
+			let left = this.x;
+			let dis = ball.radius;
+			
+			if(Math.abs(left - x) <= dis && y >= top && y <= bottom){
+				ball.changeDir(1);
+				ball.tag = ball.tag ^ 1;  
+				return true;
+			}
+			if(Math.abs(x - right) <= dis && y >= top && y <= bottom){
+				ball.changeDir(0);
+				ball.tag = ball.tag ^ 1;
+				return true;
+			}
+			if(Math.abs(bottom - y) <= dis && x >= left && x <= right){
+				ball.changeDir(3);
+				ball.tag = ball.tag ^ 1;
+				return true;
+			}
+			if(Math.abs(top - y) <= dis && x >= left && x <= right){
+				ball.changeDir(2);
+				ball.tag = ball.tag ^ 1;
+				return true;
+			}
+			return false;
+		}
+	}
+	
+	let myBoard = new board((left_bound+right_bound)/2,
+						canvas.height-50,
+						(right_bound-left_bound)/7,
+						10,//宽度
+						12);//速度
+
 	setInterval(function(){
 		ctx.clearRect(left_bound,0,right_bound - left_bound,canvas.height);
 		
-		for(let i = 0;i < ballList.length;i++){
+		for(let i = 0;i < ballList.length;i++){ // 清除飞出去的小球
 			ballList[i].update();
+			if(ballList[i].activate == false){
+				ballList.splice(i,1);
+				i--;
+			}
+		}
+		for(let i = 0;i < ballList.length;i++){
 			for(let j = 0;j < brickList.length;j++){
 				if(brickList[j].checkCollision(ballList[i])){
 					brickList.splice(j,1);
 					j--;
 				}
 			}
+			myBoard.checkCollision(ballList[i]);
 			ballList[i].draw();
 		}
 		for(let i = 0;i < brickList.length;i++){
 			brickList[i].draw();
 		}
+
+		if(ballList.length == 0 && brickList.length > 0)
+		{
+			alert("You Lose!");
+			return 0;
+		}
+		if(brickList.length == 0)
+		{
+			alert("You Win!");
+			return 0;
+		}
+
 	},1000 / 60);
+
+	var render = function(){
+		myBoard.update();
+		myBoard.draw();
+		window.requestAnimationFrame(render);
+		window.onkeydown = function(e)
+		{
+			var e = e || window.event;
+			if(e.keyCode == 37){
+				e.preventDefault(); 
+				myBoard.dir = -1; // 左移
+			}
+			if(e.keyCode == 39){
+				e.preventDefault();
+				myBoard.dir = 1; // 右移
+			}	
+		}
+		window.onkeyup = function(e)
+		{
+			var e = e || window.event;
+			if(e.keyCode == 37 || e.keyCode == 39)
+				myBoard.dir = 0;
+		}
+	};
+	render();
 </script>
-<!-- 
-<script src="test.js"></script> -->
+
+
