修改整体代码 模块化~

--- a/测试/One_people.html
+++ b/测试/One_people.html
@@ -22,8 +22,4 @@
 		<canvas id="canvas" width="" height=""></canvas>
 	</body>
 </html>
-<script type="text/javascript" src="./Ball.js"></script>
-<script type="text/javascript" src="./Brick.js"></script>
-<script type="text/javascript" src="./Board.js"></script>
-<script type="text/javascript" src="./One_people.js"></script>
-<script type="text/javascript" src="./Check.js"></script>
+<script type="module" src="./One_people.js"></script>
