进行精细化包装~

--- a/测试/Two_people.html
+++ b/测试/Two_people.html
@@ -20,7 +20,15 @@
 		</style>
 	</head>
 	<body id="body">
-		<canvas id="canvas" width="" height=""></canvas>
+		<img src="./images/ball1.png"  id="ball1" style="display:none"></img>
+		<img src="./images/ball2.png"  id="ball2" style="display:none"></img>
+		<img src="./images/brick1.png" id="brick1" style="display:none"></img>
+		<img src="./images/brick2.png" id="brick2" style="display:none"></img>
+		<img src="./images/brick3.png" id="brick3" style="display:none"></img>
+		<img src="./images/wall1.png"  id="wall1" style="display:none"></img>
+		<img src="./images/board.png"  id="board" style="display:none"></img>
+		<img src="./images/background.jpeg" id="background" style="display:none"></img>
+		<canvas id="canvas" width = "" height = ""></canvas>
 	</body>
 </html>
 <script type="module" src="./Two_people.js"></script>
