--- a/测试/Two_people.html
+++ b/测试/Two_people.html
@@ -27,6 +27,7 @@
 		<img src="./images/brick3.png" id="brick3" style="display:none"></img>
 		<img src="./images/wall1.png"  id="wall1" style="display:none"></img>
 		<img src="./images/board.png"  id="board" style="display:none"></img>
+		<img src="./images/prop.png" id="prop" style="display: none;"></img>
 		<img src="./images/background.jpeg" id="background" style="display:none"></img>
 		<canvas id="canvas" width = "" height = ""></canvas>
 	</body>
