规范代码，增添双人模式逻辑~

--- a/测试/One_people.html
+++ b/测试/One_people.html
@@ -32,4 +32,5 @@
 		<canvas id="canvas" width = "" height = ""></canvas>
 	</body>
 </html>
+<script src="./function/jquery-3.5.1.js"></script>
 <script type="module" src="./One_people.js"></script>
