--- a/测试/Two_people.html
+++ b/测试/Two_people.html
@@ -32,4 +32,5 @@
 		<canvas id="canvas" width = "" height = ""></canvas>
 	</body>
 </html>
+<script src="jquery-3.5.1.js"></script>
 <script type="module" src="./Two_people.js"></script>
