--- a/测试/Two_people.html
+++ b/测试/Two_people.html
@@ -29,6 +29,7 @@
 		<img src="./images/board.png"  id="board" style="display:none"></img>
 		<img src="./images/prop_ban.png" id="prop_ban" style="display: none;"></img>
 		<img src="./images/prop_qiu.png" id="prop_qiu" style="display: none;"></img>
+		<img src="./images/prop_s.png" id="prop_s" style="display: none;"></img>
 		<img src="./images/background.jpeg" id="background" style="display:none"></img>
 		<canvas id="canvas" width = "" height = ""></canvas>
 	</body>
