增加部分道具音效 修改部分bug

--- a/测试/One_people.html
+++ b/测试/One_people.html
@@ -14,7 +14,9 @@
 		<img src="./images/brick3.png" id="brick3" style="display:none"></img>
 		<img src="./images/wall1.png"  id="wall1" style="display:none"></img>
 		<img src="./images/board.png"  id="board" style="display:none"></img>
-		<img src="./images/prop.png" id="prop" style="display: none;"></img>
+		<img src="./images/prop_ban.png" id="prop_ban" style="display: none;"></img>
+		<img src="./images/prop_qiu.png" id="prop_qiu" style="display: none;"></img>
+		<img src="./images/prop_s.png" id="prop_s" style="display: none;"></img>
 		<img src="./images/background.jpeg" id="background" style="display:none"></img>
 		<canvas id="canvas" width = "" height = ""></canvas>
 	
